# very-last-traffic-surveillance

./: CMakeLists.txt  full traffic surveillance system.sln  full traffic surveillance system.vcxproj  full traffic surveillance system.vcxproj.filters
include/: DBManager.h  HelmetDetector.h  LicensePlateDetector.h  NetworkServer.h  VehicleDetector.h  json.hpp
python_scripts/: helmet_detect.py  license_plate_detector.py  vehicle_detector.py
src/: DBManager.cpp  HelmetDetector.cpp  LicensePlateDetector.cpp  NetworkServer.cpp  VehicleDetector.cpp  main.cpp
